add .venv to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Python virtual environment
+.venv
+
 # <!-- Managed automatically by PreTeXt authoring tools -->
 # (delete the above line to manage this file manually)
 
@@ -89,7 +92,6 @@ bh_unicode_properties.cache
 # Sublime-github package stores a github token in this file
 # https://packagecontrol.io/packages/sublime-github
 GitHub.sublime-settings
-
 
 # Don't include Dropbox settings and caches
 .dropbox
