added venv to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -5,12 +5,13 @@
 # ensure this file is tracked
 !.gitignore
 
+# don't track Environments
+venv/
+
 # don't track unpublished builds or stage (note: Runestone uses `published`)
 output
 published
 
-# Environments
-venv/
 # don't track assets generated from source
 generated-assets
 
